--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
 <%= @post.title %>
 <%= @post.body %>
 <%= link_to "edit", edit_post_path(@post)  %>
+<%= link_to "destroy" , @post, method: :delete %>
